--- a/makePlanner/src/main/resources/application.properties
+++ b/makePlanner/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+server.port=8085
+
 #datasource
 spring.datasource.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul 
 spring.datasource.username=bootTest
 spring.datasource.password=bootTest1346**
+
+spring.mvc.hiddenmethod.filter.enabled=true
