[수정] 로그아웃 뒤로가기 막기(세션으로 판단함..)

--- a/makePlanner/build.gradle
+++ b/makePlanner/build.gradle
@@ -19,6 +19,12 @@ repositories {
 	mavenCentral()
 }
 
+// https://logging.apache.org/log4j/2.x/security.html
+ext['log4j2.version'] = '2.15.0'
+
+// https://tomcat.apache.org/security-9.html
+ext['tomcat.version'] = '9.0.56' 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
