--- a/makePlanner/src/main/resources/application.properties
+++ b/makePlanner/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=bootTest
 spring.datasource.password=bootTest1346**
 
 spring.mvc.hiddenmethod.filter.enabled=true
+# spring.resources.cache.cachecontrol.no-cache: true
