[수정] 회원가입

--- a/makePlanner/build.gradle
+++ b/makePlanner/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	
+	// aspectj
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	
 	// 시큐리티
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'	
